<resources>
    <string name="app_name">Organizzatore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="funzionalita">Funzionalità</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="cronometro">Cronometro</string>
    <string name="darkLight">Tema Scuro/ Tema chiaro</string>
    <string name="language">Lingua TI/EN</string>
    <string name="reset">Reset</string>
    <string name="start">Inizio</string>
    <string name="pause">Pausa</string>
    <string name="nome">Nome</string>
    <string name="rep">Ripetizioni</string>
    <string name="prossima_attivita">passa alla prossima attività</string>
    <string name="organizza">Organizza</string>
    <string name="studio">Studio</string>
    <string name="posizione">Posizione</string>
    <string name="Organizza">Organizzati!</string>
    <string name="by_b_amp_r"><![CDATA[By B&R]]></string>
    <string name="tempoattivita">Durata attività (in minuti)</string>
    <string name="tempoinizio">00:00</string>
    <string name="durata_attivita">Durata attività \u0020</string>
    <string name="subtitle">Organizzati al meglio per un domani perfetto</string>
    <string name="inglese_italiano"> Passa da lingua italiana a inglese</string>
    <string name="day_night">Attiva o disattiva la modalità notturna</string>
    <string name="notifica"> Notifica</string>
    <string name="sportorganize">Organizza la tua attività motoria</string>
    <string name="materie">Materie</string>
    <string name="attivitàlavoro">Attività lavorative</string>
    <string name="hobby">Dedicati ai tuoi hobby</string>
    <string name="esercizi">Esercizi da svolgere</string>
    <string name="sottolavori">Svolgi passo per passo il lavoro</string>
    <string name="hobbyorganize">Organizza il tuo hobby</string>
    <string name="daccidentro">E\' tempo di svolgere la tua attività!</string>
    <string name="cosa_da_fare">cosa da fare</string>
    <string name="next">avanti</string>
    <string name="chiudi">chiudi</string>
    <string name="sport">Sport</string>
    <string name="lavoro">Lavoro</string>
    <string name="freetime">Tempo libero</string>
    <string name="crea">Crea</string>
    <string name="cancella">Cancella</string>
    <string name="askact">Che attività vuoi aggiungere?</string>
    <string name="tempo_h_m_s">Tempo (O:M:S)</string>
    <string name="darkmode">Modalità notturna</string>
    <string name="lingua">Lingua</string>
    <string name="darkmodeenable">Modalità notturna attivata</string>
    <string name="darkmodedisable">Modalità notturna disattivata</string>
    <string name="exit"> Sei sicuro di voler uscire?</string>
    <string name="usciretitolo"> Esci dall\'applicazione </string>
    <string name="si"> Si </string>
    <string name="attivitasvolta"> HAI TERMINATO LA TUA ATTIVITA\'</string>
    <string name="tasksvolta"> HAI TERMINATO LA TASK N. </string>
    <string name="attivitafinita"> Attività finita</string>
    <string name="attivitafrase"> Hai finito la tua attività</string>
    <string name="elemento"> Inserita nuova attività </string>
    <string name="deleteAll"> Cancella lista </string>
    <string name="comefunziona">Come funziona?</string>
    <string name="choose">Scegli quale tipo di attività svolgere tra le quattro disponibili</string>
    <string name="attivitadacreare"> Crea la tua attività da svolgere </string>
    <string name="dividiattivita"> Dividi la tua attività da svolgere in sotto-attività </string>
</resources>