<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/darkmode">
        <SwitchPreference
            android:defaultValue="false"
            android:key="night"
            android:summaryOff="@string/darkmodedisable"
            android:summaryOn="@string/darkmodeenable"
            android:title="@string/day_night" />
    </PreferenceCategory>

   <PreferenceCategory
        android:title="@string/lingua">
        <SwitchPreference
            android:title="@string/inglese_italiano"
            android:key="translate"
            android:defaultValue="false"
            android:summaryOn="English"
            android:summaryOff="Italiano" />
    </PreferenceCategory>
</PreferenceScreen>