<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.organizzatore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_lavoro2"
            app:destination="@id/lavoro2" />
    </fragment>

    <fragment
        android:id="@+id/nav_cronometro"
        android:name="com.example.organizzatore.ui.cronometro.Cronometro"
        android:label="@string/cronometro"
        tools:layout="@layout/fragment_cronometro"/>

    <fragment
        android:id="@+id/nav_slide"
        android:name="com.example.organizzatore.ui.slide.SlideFragment"
        android:label="@string/comefunziona"
        tools:layout="@layout/fragment_slide"/>
    <activity
        android:id="@+id/lavoro2"
        android:name="com.example.organizzatore.ui.attivita.Lavoro"
        android:label="Lavoro" />

</navigation>