<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/sport"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                card_view:cardCornerRadius="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/img_sport"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    card_view:lottie_rawRes="@raw/cycle"
                    card_view:lottie_autoPlay="true"
                    card_view:lottie_loop="true"
                    android:background="@color/sky"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/img_sport"
                    android:layout_alignTop="@id/img_sport"
                    android:layout_alignRight="@id/img_sport"
                    android:layout_alignBottom="@id/img_sport"
                    android:layout_margin="8dp"
                    android:gravity="left"
                    android:text="@string/sport"
                    android:textColor="@color/black_or_white"
                    android:textSize="24dp" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/studio"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                card_view:cardCornerRadius="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/img_study"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    card_view:lottie_rawRes="@raw/study"
                    card_view:lottie_autoPlay="true"
                    card_view:lottie_loop="true"
                    android:background="@color/green"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/img_study"
                    android:layout_alignTop="@id/img_study"
                    android:layout_alignRight="@id/img_study"
                    android:layout_alignBottom="@id/img_study"
                    android:layout_margin="8dp"
                    android:gravity="left"
                    android:text="@string/studio"
                    android:textColor="@color/black_or_white"
                    android:textSize="24dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/lavoro"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                card_view:cardCornerRadius="16dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/img_work"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    card_view:lottie_rawRes="@raw/work"
                    card_view:lottie_autoPlay="true"
                    card_view:lottie_loop="true"
                    android:background="@color/lavender"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/img_work"
                    android:layout_alignTop="@id/img_work"
                    android:layout_alignRight="@id/img_work"
                    android:layout_alignBottom="@id/img_work"
                    android:layout_margin="8dp"
                    android:gravity="left"
                    android:text="@string/lavoro"
                    android:textColor="@color/black_or_white"
                    android:textSize="24dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/freetime"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="3dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/img_freetime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Tomato"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/play" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/img_freetime"
                    android:layout_alignTop="@id/img_freetime"
                    android:layout_alignRight="@id/img_freetime"
                    android:layout_alignBottom="@id/img_freetime"
                    android:layout_margin="8dp"
                    android:gravity="left"
                    android:text="@string/freetime"
                    android:textColor="@color/black_or_white"
                    android:textSize="24dp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>